# faster-whisper-rs

./: .gitignore  .npmignore  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  index.d.ts  index.js  package-lock.json  package.json  streaming-batcher.js  streaming-worker-pool.js  test.js  worker-pool-batcher.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: transcription.bench.js
crates/engine/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/engine/src/: audio.rs  download.rs  lib.rs  silero_vad.rs  streaming.rs  vad.rs  word_timestamps.rs
docs/: CONCURRENT_STREAMING.md  TESTING.md
scripts/: build-linux.sh  build-mac.sh  download-prebuilt.sh  post-build.js
stress-tests/: README.md  batched-streaming.test.js  concurrent-streaming-engine.test.js  concurrent.test.js  feature-stress.test.js  memory.test.js  metal-streaming.test.js  multi-engine.test.js  parallel-bench.js  realtime-streaming.test.js  server.js  streaming-analysis.test.js  streaming-engine.test.js  streaming-long.test.js  streaming-worker-pool.test.js  thread-config-bench.js  throughput-bench.js  worker-pool-streaming.test.js  worker-pool.test.js
tests/: phase3.test.js  phase4.test.js
tests/e2e/: transcription.test.js
tests/fixtures/: hello.flac
tests/integration/: engine-options.test.js  transcription.test.js
tests/unit/: audio.test.js  engine.test.js  utils.test.js
