[package]
name = "whisper-live-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["async", "tokio_rt"] }
napi-derive = "2.12"
# We use ct2rs to generate safe bindings to the C++ lib
# Enable "accelerate" on macOS for Apple Silicon optimization via Accelerate.framework
ct2rs = { version = "0.9.14", features = ["whisper", "accelerate"] } 
anyhow = "1.0"

# Audio decoding (multi-format support)
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "pcm"] }

# Resampling to 16kHz
rubato = "0.15"

# HTTP for model download
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
futures = "0.3"

# Utilities
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"

# Word timestamp parsing
regex = "1.10"

[build-dependencies]
napi-build = "2"
