[package]
name = "whisper-live-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["async", "tokio_rt"] }
napi-derive = "2.12"

# Whisper.cpp bindings with Metal support for macOS
# Using fork with full_parallel API until merged upstream
whisper-rs = { git = "https://github.com/manmal/whisper-rs.git", branch = "fix/add-full-parallel-api-v2", features = ["metal", "coreml"] }

anyhow = "1.0"

# Audio decoding (multi-format support)
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "pcm"] }

# Resampling to 16kHz
rubato = "0.15"

# HTTP for model download
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
futures = "0.3"

# Utilities
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"

# Word timestamp parsing
regex = "1.10"

# ONNX Runtime for Silero VAD (optional)
ort = { version = "2.0.0-rc.10", optional = true }

[build-dependencies]
napi-build = "2"

[features]
default = []
# For Linux/CUDA systems
cuda = ["whisper-rs/cuda"]
# Silero VAD neural network support
silero-vad = ["ort"]
